--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,10 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+          
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test
 
