--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  #build:
     working_directory: ~/code
     docker:
       - image: circleci/ruby:2.4.1-jessie
@@ -41,9 +41,4 @@ jobs:
       - store_test_results:
           path: app/build/test-results
           
-workflows:
-  version: 2
-  test:
-    jobs:
-      - test
 
