--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - command: ./gradlew androidDependencies
       - save_cache:
           paths:
-            - ~/.gradle
+            ~/.gradle
             key: jars-{{ checksum "build.gradle" }} - {{ checksum "app/build.gradle" }}
       - run:
         name: Setup emulator
