--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
       - image: circleci/ruby:2.4.1-jessie
     steps:
       - checkout
+    general:
+        build_dir: /android/
       - run: 
           name: Build gradle
           command: ./gradlew androidDependencies
