--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
         build_dir: /android/
       - run: 
           name: Build gradle
-          command: ./gradlew androidDependencies
+          command: gradlew androidDependencies
       - run:
           name: Setup emulator
           command: sdkmanager "system-images;emulator:5554;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;emulator:5554;default;armeabi-v7a"
@@ -23,7 +23,7 @@ jobs:
             adb shell input keyevent 82
       - run:
           name: Run EspressoTests
-          command: ./gradlew loginTest
+          command: gradlew loginTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
