--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,17 +11,10 @@ jobs:
       - run:
           name: Setup emulator
           command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
-      - run:
-         name: Launch emulator
-         command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
-      - run:
-          name: Wait emulator
-          command: |
-            sleep 30
-            adb shell input keyevent 82
+      #removed
       - run:
           name: Run EspressoTests
-          command: gradlew loginTest
+          command: ./gradlew loginTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
