--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       #removed
       - run:
           name: Run EspressoTest
-          command: cd AndroidDemo/;./gradlew loginTest
+          command: cd AndroidDemo/;gradle loginTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
