--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,33 @@
+version: 2
 machine:
   environment:
-    PATH: "~/$CIRCLE_PROJECT_REPONAME/gradle-4.4/bin:$PATH"
-    ADB_INSTALL_TIMEOUT: "10"
     GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
-
-dependencies:
-  pre:
-    - wget "https://services.gradle.org/distributions/gradle-2.9-bin.zip"; unzip gradle-2.9-bin.zip
-    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-25
-    - echo y | android update sdk --no-ui --all --filter build-tools-23.0.2
-
-test:
-  override:
-    # start the emulator
-    - emulator -avd circleci-android25 -no-audio -no-window:
-        background: true
-        parallel: true
-    # wait for it to have booted
-    - circle-android wait-for-boot
-    # unlock the emulator screen
-    - sleep 30
-    - adb shell input keyevent 82
-    # run tests  against the emulator.
-    - ./gradlew connectedAndroidTest -PdisablePreDex
-    # copy the build outputs to artifacts
-    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-    # copy the test results to the test results directory.
-    - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
-        
-          
-
+jobs:
+  build:
+    docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
+      - image: circleci/android:api-25-alpha
+    steps:
+      - checkout
+      - run: 
+          name: Build gradle
+          command: cd AndroidDemo/;./gradlew androidDependencies
+      - run:
+          name: Setup emulator
+          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
+      - run:
+         name: Launch emulator
+         command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
+         background: true
+      - run:
+          name: Wait emulator
+          command: |
+            sleep 30
+            adb shell input keyevent 82
+      - run:
+          name: Run EspressoTest
+          command: cd AndroidDemo/;./gradlew app:connectedAndroidTest
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
